@@ -12,6 +12,7 @@ Version 2.5 ->
  - fixed bug with not heeding type parameter for --sequence get method
  - parameterized return values are now unboxed
  - improved auto-boxing of primitive type parameters
+ - added support for auto-boxing CharSequence from python strings
  - 
 
 Version 2.4 -> 2.5
